Author                          :Ruchi Pareek Description                     :Goverment horizontal scroll bar Fixed issue #

--- a/divergents/divergents-server/src/main/resources/static/css/dashboardGov.css
+++ b/divergents/divergents-server/src/main/resources/static/css/dashboardGov.css
@@ -7,10 +7,9 @@
     }
 .dashborad-panelWrap
 {
-
     background-color:#fffefe;
-    margin-left: -15px;
-    margin-right: -15px;
+/*     margin-left: -15px; */
+/*     margin-right: -15px; */
 /*     width:100% */
 /*     padding:2px; */
 /*     margin:22px 32px 21px 22px; */
