--- a/divergents/divergents-server/src/main/resources/static/css/dashboardIndustry.css
+++ b/divergents/divergents-server/src/main/resources/static/css/dashboardIndustry.css
@@ -9,8 +9,8 @@
 {
 
     background-color:#fffefe;
-    margin-left: -15px;
-    margin-right: -15px;
+/*     margin-left: -15px; */
+/*     margin-right: -15px; */
 /*     width:100% */
 /*     padding:2px; */
 /*     margin:22px 32px 21px 22px; */
