--- a/divergents/divergents-server/src/main/resources/static/css/main.css
+++ b/divergents/divergents-server/src/main/resources/static/css/main.css
@@ -54,7 +54,7 @@
 	background-color:rgb(3,117,180);
 }
 #navbar-footer li p{
-  width: 110pt;
+  width: 109pt;
   color:white
 }
 #navbar-footer li :hover p{
